<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".screen.login.LoginFragment"
                android:background="@color/midnight">

    <Button
        android:text="@string/text_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgotPasswordButton"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:textColor="?android:attr/colorForegroundInverse"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sfax_logo"
            app:srcCompat="@drawable/ic_sfax_logo"
            android:id="@+id/imageView"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal"
            android:layout_width="256dp"
            android:contentDescription="@string/desc_sfax_logo" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/usernameText"
            android:hint="@string/hint_username"
            android:textColor="?android:attr/textColorPrimaryInverse"
            android:textColorHint="?android:attr/textColorHintInverse"
            android:layout_gravity="center_horizontal"
            android:maxLines="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:nextFocusForward="@+id/passwordText">
            <requestFocus />
        </EditText>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordText"
            android:hint="@string/hint_password"
            android:textColor="?android:attr/textColorPrimaryInverse"
            android:textColorHint="?android:attr/textColorHintInverse"
            android:layout_gravity="center_horizontal"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:nextFocusForward="@+id/logInButton"
            android:fontFamily="sans-serif" />

        <Button
            android:text="@string/text_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logInButton"
            android:enabled="true"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />

    </LinearLayout>

</RelativeLayout>